isolate map with white background

--- a/isolate_map/isolate_map.ipynb
+++ b/isolate_map/isolate_map.ipynb
@@ -2,14 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "ba368fd9-ca11-4692-9604-2f7b2d0a04e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "from PIL import Image, ImageOps\n",
+    "import numpy as np\n",
+    "from scipy.ndimage import generate_binary_structure, label\n",
     "\n",
-    "def isolate_map(image_src, image_out, target_color, tolerance=20):\n",
+    "\"\"\"\n",
+    "    Isolate a specific color in an image and save it as a new image.\n",
+    "\n",
+    "    Args:\n",
+    "        image_src (str): The path to the input image.\n",
+    "        image_out (str): The path to save the isolated image.\n",
+    "        target_color (tuple): The RGB color tuple to isolate (e.g., (255, 0, 0) for red).\n",
+    "        tolerance (int, optional): Tolerance level for color matching. Default is 20.\n",
+    "\"\"\"\n",
+    "\n",
+    "def isolate_map(image_src, image_out, target_color, min_area=100, tolerance=20):\n",
     "    # Open the PNG image\n",
     "    input_image = Image.open(image_src)\n",
     "\n",
@@ -38,13 +50,34 @@
     "\n",
     "    # Create the color mask with tolerance\n",
     "    color_mask = create_color_mask(input_image, target_color, tolerance)\n",
+    "    \n",
+    "    # Convert the color mask to a binary array (black and white)\n",
+    "    color_mask_array = np.array(color_mask)\n",
     "\n",
-    "    # Save the isolated color as a new image\n",
-    "    color_mask.save(image_out)\n",
+    "    # Apply morphological operations to filter out small regions\n",
+    "    structure = generate_binary_structure(2, 2)\n",
+    "    labeled_array, num_features = label(color_mask_array[:, :, 3], structure)\n",
+    "    for feature in range(1, num_features + 1):\n",
+    "        region = labeled_array == feature\n",
+    "        if region.sum() < min_area:\n",
+    "            color_mask_array[np.where(region)] = (0, 0, 0, 0)  # Set the region to transparent\n",
+    "\n",
+    "    # Convert the filtered NumPy array back to an RGBA image\n",
+    "    color_mask_filtered = Image.fromarray(color_mask_array)\n",
+    "\n",
+    "    # Add a white background\n",
+    "    width, height = color_mask_filtered.size\n",
+    "    background_color = (255, 255, 255)\n",
+    "    background = Image.new(\"RGBA\", (width, height), background_color)\n",
+    "    background.paste(color_mask_filtered, (0, 0), color_mask_filtered)\n",
+    "\n",
+    "    # Save the isolated color with white background\n",
+    "    background.save(image_out)\n",
     "\n",
     "    # Close the original image and the color mask\n",
     "    input_image.close()\n",
-    "    color_mask.close()"
+    "    color_mask_filtered.close()\n",
+    "    background.close()"
    ]
   },
   {
@@ -55,7 +88,8 @@
    "outputs": [],
    "source": [
     "isolate_map('simple_floor_1.png', 'iso_floor_1.png', (0, 0, 255))\n",
-    "isolate_map('simple_floor_plan.png', 'iso_floor_2.png', (69, 99, 137))"
+    "isolate_map('simple_floor_plan.png', 'iso_floor_2.png', (69, 99, 137))\n",
+    "isolate_map('school_floor_plan.png', 'iso_school_1.png', (0,75,133))"
    ]
   }
  ],
